--- a/test/fixtures/annotations.yml
+++ b/test/fixtures/annotations.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: annotations
+#
+#  id           :integer          not null, primary key
+#  annotator_id :integer
+#  body         :text
+#  snippet_id   :integer
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
