--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: articles
+#
+#  id           :integer          not null, primary key
+#  url          :string(255)
+#  title        :string(255)
+#  body         :text
+#  news_source  :string(255)
+#  submitter_id :integer
+#  topic_id     :integer
+#  recommended  :boolean          default(FALSE)
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
