--- a/test/fixtures/snippets.yml
+++ b/test/fixtures/snippets.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: snippets
+#
+#  id         :integer          not null, primary key
+#  text       :string(255)
+#  article_id :integer
+#  start      :integer
+#  end        :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
