--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: news_genius_development
+  database: news_genius_dev
   host: localhost
   pool: 5
   timeout: 5000
